@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rewrite artifact_msg() to use stringbuffer, not complete.
+Nicolas Weeger 2010-02-13
+
 Fix stupid infinite loop.
 Nicolas Weeger 2010-02-13
 
